fix: fix display tags image on safari

--- a/src/widgets/MainScreen/ui/MainScreen.module.scss
+++ b/src/widgets/MainScreen/ui/MainScreen.module.scss
@@ -74,6 +74,10 @@
     &_item {
       flex: 0 1 auto;
       max-width: 140px;
+
+      img {
+        width: 100%;
+      }
     }
   }
 
